--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,7 +1,7 @@
 name: Deploy to EC2
 
 on:
-  push: 
+  push:
     branches:
       - main
 
@@ -9,13 +9,23 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code 
+      - name: Checkout code
         uses: actions/checkout@v5
 
-# Each run command is executed completely seperate on runner machine
-      - name: Set up SSH and execute deploy.sh script
+      # Each run command is executed completely seperate on runner machine
+      - name: Set up private SSH key
+        env:
+          SSH_KEY: ${{secrets.EC2_SSH_KEY}}
+          EC2_HOST: ${{ secrets.EC2_HOST }}
         run: |
-          mkdir -p ~/.ssh && echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_ed25519
-          chmod 600 ~/.ssh/id_ed25519 && ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
-          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_ed25519 ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} 'source ~/.bashrc && bash -s' < ./deploy.sh
+          mkdir -p ~/.ssh 
+          echo "$SSH_KEY" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
+          ssh-keyscan -H "$EC2_HOST" >> ~/.ssh/known_hosts
+
+      - name: SSH into EC2 instance
+        run: |
+          ls ~/.ssh
+          cat ~/.ssh/id_ed25519
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_ed25519 ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}< ./deploy.sh
           echo "Deployment complete...🎉"
