--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,16 +12,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v5
 
-      # Each run command is executed completely seperate on runner machine
-      - name: Set up private SSH key
-        env:
-          SSH_KEY: ${{secrets.EC2_SSH_KEY}}
-          EC2_HOST: ${{ secrets.EC2_HOST }}
-        run: |
-          mkdir -p ~/.ssh 
-          echo "$SSH_KEY" > ~/.ssh/id_ed25519
-          chmod 600 ~/.ssh/id_ed25519
-          ssh-keyscan -H "$EC2_HOST" >> ~/.ssh/known_hosts
+      # - name: Set up private SSH key
+      #   env:
+      #     SSH_KEY: ${{secrets.EC2_SSH_KEY}}
+      #     EC2_HOST: ${{ secrets.EC2_HOST }}
+      #   run: |
+      #     mkdir -p ~/.ssh 
+      #     echo "$SSH_KEY" > ~/.ssh/id_ed25519
+      #     chmod 600 ~/.ssh/id_ed25519
+      #     ssh-keyscan -H "$EC2_HOST" >> ~/.ssh/known_hosts
 
       - name: SSH into EC2 instance
         run: |
