--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,19 +12,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v5
 
-      # - name: Set up private SSH key
-      #   env:
-      #     SSH_KEY: ${{secrets.EC2_SSH_KEY}}
-      #     EC2_HOST: ${{ secrets.EC2_HOST }}
-      #   run: |
-      #     mkdir -p ~/.ssh 
-      #     echo "$SSH_KEY" > ~/.ssh/id_ed25519
-      #     chmod 600 ~/.ssh/id_ed25519
-      #     ssh-keyscan -H "$EC2_HOST" >> ~/.ssh/known_hosts
+      - name: Set up private SSH key
+        env:
+          SSH_KEY: ${{secrets.EC2_SSH_KEY}}
+          EC2_HOST: ${{ secrets.EC2_HOST }}
+        run: |
+          mkdir -p ~/.ssh
+          echo "$SSH_KEY" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
+          ssh-keyscan -H "$EC2_HOST" >> ~/.ssh/known_hosts
 
       - name: SSH into EC2 instance
         run: |
-          ls ~/.ssh
+          ls ~/.ssh -la
           cat ~/.ssh/id_ed25519
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_ed25519 ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}< ./deploy.sh
           echo "Deployment complete...🎉"
