--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,4 +24,7 @@ jobs:
 
       - name: SSH into EC2 instance
         run: |
+          hostname
+          pwd
+          whoami
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_ed25519 ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} < ./deploy.sh
