--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,10 +21,11 @@ jobs:
           echo "$SSH_KEY" > ~/.ssh/id_ed25519
           ls ~/.ssh/id_ed25519 -l
           chmod 600 ~/.ssh/id_ed25519
+          ssh-keyscan -H "$EC2_HOST" >> ~/.ssh/known_hosts
 
       - name: Copy script using SCP
         env:
           SSH_KEY: ${{secrets.EC2_SSH_KEY}}
           EC2_HOST: ${{ secrets.EC2_HOST }}
         run:
-          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_ed25519 ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} < ./deploy.sh
+          ssh -i ~/.ssh/id_ed25519 ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} < ./deploy.sh
