--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,6 +16,7 @@ jobs:
         env:
           SSH_KEY: ${{secrets.EC2_SSH_KEY}}
           EC2_HOST: ${{ secrets.EC2_HOST }}
+        # Make sure that .pub file of SSH_KEY is added to the ~/.ssh/authorized_keys
         run: |
           mkdir -p ~/.ssh
           echo "$SSH_KEY" > ~/.ssh/id_ed25519
@@ -25,7 +26,6 @@ jobs:
 
       - name: Copy script using SCP
         env:
-          SSH_KEY: ${{secrets.EC2_SSH_KEY}}
+          EC2_USER: ${{secrets.EC2_USER}}
           EC2_HOST: ${{ secrets.EC2_HOST }}
-        run:
-          ssh -i ~/.ssh/id_ed25519 ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} < ./deploy.sh
+        run: scp deploy.sh "$EC2_USER"@"$EC2_HOST":/home/ubuntu
