--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,3 +29,7 @@ jobs:
           EC2_USER: ${{secrets.EC2_USER}}
           EC2_HOST: ${{ secrets.EC2_HOST }}
         run: scp deploy.sh "$EC2_USER"@"$EC2_HOST":/home/ubuntu
+      - name: Execute the deploy.sh script
+        run: |
+          chmod +x ~/deploy.sh
+          ~/deploy.sh
