--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,8 +28,12 @@ jobs:
         env:
           EC2_USER: ${{secrets.EC2_USER}}
           EC2_HOST: ${{ secrets.EC2_HOST }}
+          EC2_KEY: ${{ secrets.EC2_SSH_KEY }}
         run: scp deploy.sh "$EC2_USER"@"$EC2_HOST":/home/ubuntu
+
       - name: Execute the deploy.sh script
         run: |
+          ls ~/.ssh -l
+          ls ~ -la
           chmod +x ~/deploy.sh
           ~/deploy.sh
