--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,12 +28,15 @@ jobs:
         env:
           EC2_USER: ${{secrets.EC2_USER}}
           EC2_HOST: ${{ secrets.EC2_HOST }}
-          EC2_KEY: ${{ secrets.EC2_SSH_KEY }}
         run: scp deploy.sh "$EC2_USER"@"$EC2_HOST":/home/ubuntu
 
       - name: Execute the deploy.sh script
+        env:
+          EC2_USER: ${{secrets.EC2_USER}}
+          EC2_HOST: ${{ secrets.EC2_HOST }}
+          SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
         run: |
-          ls ~/.ssh -l
-          ls ~ -la
+          cat ~/.ssh/id_ed25519
+          ssh -i ~/.ssh/id_ed25519 "$SSH_USER"@"$SSH_HOST"
           chmod +x ~/deploy.sh
           ~/deploy.sh
